2009-09-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* mwheel.el (mouse-wheel-mode): Make sure the new defvar doesn't
	actually define the variable, but only silences the byte-compiler.
	(mouse-wheel-change-button): Check whether mouse-wheel-mode is bound
	before looking it up.
	(mouse-wheel-scroll-amount): Also reset the bindings if this value
	is changed.

2009-09-12  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/elint.el (elint-file): Make max-lisp-eval-depth at least
	1000.
	(elint-add-required-env): Don't beep on error.
	(elint-forms): In case of error, return ENV unchanged.

2009-09-12  Daiki Ueno  <ueno@unixuser.org>

	* epg.el (epg-make-context): Add autoload cookie.
	(epg-list-keys, epg-cancel, epg-start-decrypt, epg-decrypt-file)
	(epg-decrypt-string, epg-start-verify, epg-verify-file)
	(epg-verify-string, epg-start-sign, epg-sign-file)
	(epg-sign-string, epg-start-encrypt, epg-encrypt-file)
	(epg-encrypt-string, epg-start-export-keys)
	(epg-export-keys-to-file, epg-export-keys-to-string)
	(epg-start-import-keys, epg-import-keys-from-file)
	(epg-import-keys-from-string, epg-start-receive-keys)
	(epg-receive-keys, epg-import-keys-from-server)
	(epg-start-delete-keys, epg-delete-keys, epg-start-sign-keys)
	(epg-sign-keys, epg-start-generate-key)
	(epg-generate-key-from-file, epg-generate-key-from-string):
	Remove autoload cookie.

2009-09-12  Eli Zaretskii  <eliz@gnu.org>

	* dos-fns.el (dos-reevaluate-defcustoms): Comment out the
	reevaluation of trash-directory.

	* mwheel.el: Fix last change.
	(mouse-wheel-mode): New defvar.
	(mouse-wheel-mode): Remove autoload cookie.

2009-09-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* mwheel.el (mwheel-installed-bindings): New var.
	(mouse-wheel-mode): Use it, so as to make sure we really remove all
	the bindings we set last time.  Use custom-initialize-delay.
	* loadup.el: Load mwheel after term/*-win.el.
	* startup.el (command-line): Don't reevaluate mouse-wheel-down-event